--- a/index.html
+++ b/index.html
@@ -151,6 +151,200 @@
 
 	<script>
 	
+	var options = {
+    center: [37.8, -85.8],
+    zoom: 7.4,
+    zoomSnap: .1,
+    zoomControl: false
+}
+var map = L.map('map', options);
+$.getJSON("data/ky_counties_housing.json", function(data) {
+L.geoJson(data, {
+  style: function(feature) {
+    return {
+      color: '#dddddd',
+      weight: 1,
+      fillOpacity: 1,
+      fillColor: '#1f78b4'
+    };
+  }
+}).addTo(map)
+L.geoJson(data).addTo(map);
+});
+
+map.addControl( L.control.zoom({ position: 'topright' }));
+// data paramter is not accessible here! (fixed)
+
+var attributeValue = "OWNED_MORT" ,
+normValue = "OWNER";
+var countyLayer = $.getJSON("data/ky_counties_housing.json", function(data) {
+
+  var dataLayer = L.geoJson(data, {
+    style: function(feature) {
+      return {
+        color: '#444',
+        weight: 1,
+        fillOpacity: 1,
+        fillColor: '#1f78b4'
+      };
+    }
+  })
+// call to new function here gets data out of the
+ // find zoom extent from new layer
+ var zoomExtent = dataLayer.getBounds()
+
+// Apply the extent to our map with a custom property
+// that says max zoom on load will not exceed 8
+// which adds margin around the state.
+map.fitBounds(zoomExtent, {
+    maxZoom: 8
+})
+dataLayer.addTo(map)
+// call back function
+drawMap(dataLayer);
+});
+
+// Tell jQuery to wait until data is loaded before executing a function
+$.when(countyLayer).done(function () {
+  // load, filter, and style the state outline 
+  $.getJSON("data/us_states_500k.geojson", function (data) {
+
+      var stateLayer = L.geoJson(data, {
+        style: function (feature) {
+          return {
+            // Let's experiment with these colors shortly
+            // color: '#222222', // Gray
+            color: '#ffffff', // White
+            // Make line weight larger than the county outline
+            weight: 2,
+            fillOpacity: 0,
+            // This property allows us control interactivty of layer
+            interactive: false
+          };
+        },
+      });
+
+      // Add layer to map!
+      stateLayer.addTo(map)
+
+  });
+});
+
+function drawMap (dataLayer) {
+var breaks = getClassBreaks(dataLayer);
+dataLayer.eachLayer(function(layer) {
+var props = layer.feature.properties;
+layer.setStyle({
+  fillColor: getColor(props[attributeValue]/props[normValue], breaks)
+});
+});
+function getColor(d, breaks) {
+
+  if(d <= breaks[0][1]) {
+    return '#f1eef6';
+  } else if(d <= breaks[1][1]) {
+    return '#bdc9e1';
+  } else if(d <= breaks[2][1]) {
+    return '#74a9cf';
+  } else if(d <= breaks[3][1]) {
+    return '#2b8cbe'
+  } else if(d <= breaks[4][1]) {
+    return '#045a8d'
+  }
+} // end getColor
+function drawLegend(breaks){
+
+// create a new Leaflet control object, and position it top left
+var legend = L.control({position: 'topleft'});
+
+// when the legend is added to the map
+legend.onAdd = function () {
+
+    // create a new HTML <div> element and give it a class name of "legend"
+    var div = L.DomUtil.create('div', 'legend');
+
+    // first append an <h3> tag to the div holding the current attribute
+    // and norm values (i.e., the mapped phenomena)
+    div.innerHTML = `<h3>${attribute} per  ${norm}</h3>`;
+
+    // for each of our breaks
+    for (var i = 0; i < breaks.length; i++) {
+        // determine the color associated with each break value,
+        // including the lower range value
+        var color = getColor(breaks[i][0], breaks);
+
+        // concatenate a <span> tag styled with the color and the range values
+        // of that class and include a label with the low and a high ends of that class range
+        div.innerHTML +=
+            `<span style="background:${color}"></span>
+            <label>${(breaks[i][0]*100).toLocaleString()}&mdash;
+            ${(breaks[i][1]*100).toLocaleString()}</label>`;
+    }
+
+    // return the populated div to be added to the map
+    return div;
+};
+
+// add the legend to the map
+legend.addTo(map);
+if (L.Browser.mobile) {
+  // if true use popup
+  layer.bindPopup(toolTipInfo);
+  } else {
+  // if false use tooltip
+  layer.bindTooltip(toolTipInfo, {
+    sticky: true
+  });
+};
+}
+ 
+}
+
+ 
+function getClassBreaks (dataLayer) {
+// empty array to hold all our values
+var values = [];
+
+dataLayer.eachLayer(function(layer) {
+  // shorthand refernce to properties (props)
+  var props = layer.feature.properties
+
+  // calculate the normalized value
+  var value = props[attributeValue]/props[normValue];
+// push that value to the array
+values.push(value);
+});
+
+console.log(values);
+
+var clusters = ss.ckmeans(values, 5);
+
+// create an array of the lowesr value within each cluster
+var breaks = clusters.map(function(cluster){
+  return [cluster[0],cluster.pop()];
+});
+return breaks; // return Array of your break values
+} // end getClassBreaks function
+
+/* --------------- Toggle on/off info footer content ---------------  */
+var clicked = false // start with false condition
+function myInfo() {
+
+    // create button that changes color on click
+    // create a footer overlay that displays 33% of the current viewport height
+    var x = document.getElementById('footer');
+    var y = document.getElementById('info-button');
+    if (clicked) {
+        y.style.background = 'rgba(100, 100, 100, 0.9)'; // gray button
+        x.style.height = '0px'; // no footer height 
+    } else {
+        y.style.background = 'rgba(146, 239, 146, 0.8)' // green button
+        x.style.height = '33vh';  // footer 33% of viewport height
+    }
+    clicked = !clicked
+
+}
+
 	</script>
 
 </body>
