--- a/index.html
+++ b/index.html
@@ -146,11 +146,34 @@
 	<script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js"
         charset="utf-8"></script>
      <!-- add jQuery JS script -->
-
-
-
 	<script>
-	
+	fetch('data/DataD15.json')
+	// fetching Census Data
+	.then(function (response) {
+		console.log(response)
+if (response.ok) {
+		return response.json()
+	}
+	 else {
+		throw new Error(`HTTP error! status: ${response.status}`);
+	}
+	})
+	// try .then method
+	.then(function (data) {
+		// Draw map from Data
+		var dataLayer = L.geoJson(data, {
+      style: function (feature) {
+        return {
+          color: 'white',
+          weight: 1,
+          fillOpacity: 1,
+          fillColor: '#1f78b4'
+        };
+      }
+    }).addTo(map)
+    // Make call to update map
+    drawMap(dataLayer);
+	})
 	var options = {
     center: [37.8, -85.8],
     zoom: 7.4,
@@ -158,7 +181,7 @@
     zoomControl: false
 }
 var map = L.map('map', options);
-$.getJSON("data/ky_counties_housing.json", function(data) {
+$.getJSON("Data/DataD15.json", function(data) {
 L.geoJson(data, {
   style: function(feature) {
     return {
@@ -175,9 +198,9 @@ L.geoJson(data).addTo(map);
 map.addControl( L.control.zoom({ position: 'topright' }));
 // data paramter is not accessible here! (fixed)
 
-var attributeValue = "OWNED_MORT" ,
-normValue = "OWNER";
-var countyLayer = $.getJSON("data/ky_counties_housing.json", function(data) {
+var attributeValue = "CENSUSTRACT" ,
+normValue = "STATE";
+var countyLayer = $.getJSON("data/DataD15", function(data) {
 
   var dataLayer = L.geoJson(data, {
     style: function(feature) {
@@ -319,7 +342,7 @@ console.log(values);
 
 var clusters = ss.ckmeans(values, 5);
 
-// create an array of the lowesr value within each cluster
+// create an array of the lower values within each cluster
 var breaks = clusters.map(function(cluster){
   return [cluster[0],cluster.pop()];
 });
