--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
 
 	<section id="about">
 		<h2>About this</h2>
-		<p>Additional information about <a href="#">the data</a> and map goes here. Lorem ipsum dolor sit amet,
-			consectetur adipiscing elit. Duis urna magna, maximus nec laoreet sit amet, dictum ultricies nibh. Ut id
-			auctor lacus. Nam a dolor et justo luctus luctus. </p>
+		<p> I wanted to construct a map that focused on an interesting topic. Though not the most lighthearted, food security is especially important nowadays.
+			The data from the USDA <a href="#">Economic Research Service</a>  depicts family's and their median income across the United States. </p>
 		<p>Map authored by Joyia Williams</p>
 	</section>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -267,6 +266,32 @@ layer.setStyle({
   fillColor: getColor(props[attributeValue]/props[normValue], breaks)
 });
 });
+
+
+function getClassBreaks (dataLayer) {
+// empty array to hold all our values
+var values = [];
+
+dataLayer.eachLayer(function(layer) {
+  // shorthand refernce to properties (props)
+  var props = layer.feature.properties
+
+  // calculate the normalized value
+  var value = props[attributeValue]/props[normValue];
+// push that value to the array
+values.push(value);
+});
+
+console.log(values);
+
+var clusters = ss.ckmeans(values, 5);
+
+// create an array of the lower values within each cluster
+var breaks = clusters.map(function(cluster){
+  return [cluster[0],cluster.pop()];
+});
+return breaks; // return Array of your break values
+} // end getClassBreaks function
 function getColor(d, breaks) {
 
   if(d <= breaks[0][1]) {
@@ -281,6 +306,7 @@ function getColor(d, breaks) {
     return '#045a8d'
   }
 } // end getColor
+
 function drawLegend(breaks){
 
 // create a new Leaflet control object, and position it top left
@@ -330,30 +356,7 @@ if (L.Browser.mobile) {
 }
 
  
-function getClassBreaks (dataLayer) {
-// empty array to hold all our values
-var values = [];
 
-dataLayer.eachLayer(function(layer) {
-  // shorthand refernce to properties (props)
-  var props = layer.feature.properties
-
-  // calculate the normalized value
-  var value = props[attributeValue]/props[normValue];
-// push that value to the array
-values.push(value);
-});
-
-console.log(values);
-
-var clusters = ss.ckmeans(values, 5);
-
-// create an array of the lower values within each cluster
-var breaks = clusters.map(function(cluster){
-  return [cluster[0],cluster.pop()];
-});
-return breaks; // return Array of your break values
-} // end getClassBreaks function
 
 /* --------------- Toggle on/off info footer content ---------------  */
 var clicked = false // start with false condition
