--- a/index.html
+++ b/index.html
@@ -122,6 +122,58 @@
 				display: none;
 			}
 		}
+
+		#info-button {
+    padding: 8px 5px;
+    font-size: 0.9em;
+    font-weight: bolder;
+    /* Style matches Leaflet controls */
+    border: 2px solid rgba(244, 244, 244, 0.2);
+    background: rgba(100, 100, 100, 0.9);
+    color: rgba(244, 244, 244, 0.8);
+    border-radius: 5px;
+    /* Position is fixed next to the zoom bar */
+    position: fixed;
+    top: 11px;
+    right: 52px;
+    /* Draw it on top of all elements */
+    z-index: 9999;
+    /* Cursor change on hover -- doesn't work on touch screensn */
+    cursor: pointer;
+}
+
+#footer {
+    width: 100%;
+    background: rgba(244, 244, 244, 0.8);
+    color: rgba(20, 20, 20, 0.8);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    height: 0px;
+    padding: 0px;
+    /* display below the button to allow clicking if overlay covers screen */
+    z-index: 9000;
+    position: absolute;
+    /* 
+    Hide the footer be default. This should not contain too much information. Like to a new page for extended content.
+    */
+    bottom: -10px;
+    /* If too much is included, enable scroll */
+    overflow: scroll;
+}
+
+#footer div {
+    padding: 10px;
+}
+
+#footer h1 {
+    font-size: 1.3em;
+    margin: 0 0 5px 0;
+}
+
+.footer-img {
+    float: right;
+    height: 10vh;
+    margin: 10px;
+}
 	</style>
 </head>
 
@@ -134,8 +186,17 @@
 	<section id="about">
 		<h2>About this</h2>
 		<p> I wanted to construct a map that focused on an interesting topic. Though not the most lighthearted, food security is especially important nowadays.
-			The data from the USDA <a href="#">Economic Research Service</a>  depicts family's and their median income across the United States. </p>
-		<p>Map authored by Joyia Williams</p>
+			The data from the USDA <a href="#">Economic Research Service</a>  depicts families and their median income across the United States. </p>
+			<div id='map'></div>
+			<button id="info-button" onclick="myInfo()">Information</button>
+			<div id='footer'>
+				<div><img src="https://uky-gis.github.io/graphics/logo-color-400px.png" class="footer-img">
+					<h1> Data Sources</h1>
+					Data obtained through the Economic Reseadch Service (<a href="https://www.ers.usda.gov/data-products/food-access-research-atlas/download-the-data.aspx">ers.usda.gov</a>);
+					2015 Census, SF1. Map created by <a href="https://github.com/jrwi242">jrwi242</a>, Summer 2020.
+				</div>
+			</div>
+			<p>Map authored by Joyia Williams</p>
 	</section>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
@@ -292,6 +353,7 @@ var breaks = clusters.map(function(cluster){
 });
 return breaks; // return Array of your break values
 } // end getClassBreaks function
+
 function getColor(d, breaks) {
 
   if(d <= breaks[0][1]) {
