--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 	<section id="about">
 		<h2>About this</h2>
 		<p> I wanted to construct a map that focused on an interesting topic. Though not the most lighthearted, food security is especially important nowadays.
-			The data from the USDA <a href="#">Economic Research Service</a>  depicts families and the possible distance between them and the closest grocery store. </p>
+			The data from the USDA <a href="#">Economic Research Service</a>  depicts families and the possible distance between them and the closest food resources. </p>
 			<div id='map'></div>
 			<button id="info-button" onclick="myInfo()">Information</button>
 			<div id='footer'>
