--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 		body {
 			margin: 0;
 			padding: 0;
-			background: #222;
+			background: #ddd;
 			font-family: 'Quicksand', sans-serif;
 			font-size: 100%;
-			color: #ddd; /* light */
+			color: #222; /* light */
 		}
 
 		h1 {
@@ -37,7 +37,7 @@
 			padding: 10px 15px;
 			/* Add styles to match Leaflet UI elements */
 			background: rgba(256, 256, 256, .3);
-			box-shadow: 0 1px 3px rgba(112, 111, 111, 0.4);
+			box-shadow: 0 1px 3px rgba(224, 218, 218, 0.808);
 			border: 1px solid #ddd;
 			border-radius: 5px;
 			z-index: 800;
@@ -253,66 +253,18 @@
 		 var attributeValue =  "atlas_15_LALOWI05_10, atlas_15_LALOWI1_10, atlas_15_LALOWI1_20 ",
 		 normValue = "atlas_15_County";
 
-	fetch('data/food_acces_ky.geojson')
-	// fetching Census Data
-	.then(function (response) {
-		console.log(response)
-if (response.ok) {
-		return response.json()
-	}
-	 else {
-		throw new Error(`HTTP error! status: ${response.status}`);
-	}
-	})
-	// try .then method
-	.then(function (data) {
-		// Draw map from Data
-		var dataLayer = L.geoJson(data, {
-      style: function (feature) {
-        return {
-          color: 'white',
-          weight: 1,
-          fillOpacity: 0.6,
-          fillColor: '#1f78b4'
-        };
-	  }
-		})
-    
-	
-    // Make call to update map
-  //  drawMap(dataLayer);
-	})
-	.then(function () {
-	 drawAnotherLayer()
-	})
+var options = {
+	center: [],
+	zoom: 7.4,
+	zoomSnap: .1,
+	zoomControl: false
 
-	// define fuction draw another layer
-	function drawAnotherLayer() {
-		fetch("data/us_states_20m.geojson").then(function (response) {
-			if (response.ok) {
-				return response.json()
-			}
-		})
-		.then(function(data) {
-			L.geoJson(data,{
-				style: function (feature) {
-					return {
-						color: '#222',
-						weight: 2,
-						fillOpacity: 0.2,
-						interactive: false
-					};
-				},
-				filter: function (feature) {
-					if (feature.properties.state == "Kentucky") {
-						return feature;
-					}
-				},
-			
-			})
-		})
-	}
+}
+var map = L.map('map', options);
 
+$.getJSON("data/food_acces_ky.json", function(data) {
+L.geoJson(data).addTo(map);
+});
   function drawMap (dataLayer) {
 	var breaks = getClassBreaks(dataLayer);
 
@@ -358,7 +310,7 @@ dataLayer.eachLayer(function (layer) {
 });
 
 // determine similar clusters
-var clusters = ss.ckmeans(values, 5);
+var clusters = ss.ckmeans(values, 3);
 
 // create an array of the lowest value within each cluster
 var breaks = clusters.map(function (cluster) {
