--- a/test.html
+++ b/test.html
@@ -217,7 +217,7 @@
 
 <body>
 <div id='map'></div>
-	<h1>2015 United States Food Desert Map</h1>
+	<h1>2015 Kentucky Food Desert Map</h1>
 
 	<section id="about">
 		<h2>About this</h2>
@@ -314,7 +314,7 @@ dataLayer.eachLayer(function (layer) {
 
  layer.on('mouseover', function() {
 layer.setStyle({
-color: 'blue',
+color: '#54278f',
 weight: 4,
 }),
 
@@ -405,7 +405,6 @@ legend.onAdd = function () {
 
 // add the legend to the map
 legend.addTo(map);
-
   }
 
 /* --------------- Toggle on/off info footer content ---------------  */
